Encode langType into script JSON blob
Signed-off-by: Songkan Tang <songkant@amazon.com>